-------------------------------------------------------------------------------
Changes in version 0.3

-------------------------------------------------------------------------------
Changes in version 0.2

- Fixed vcheckquota to properly handle unset quota numbers (represented
  externally as "-").

- Modified vpopbull to allow it to exec a command after scanning for
  bulletins.  This lets it be used with pop3front and imapfront (which
  use CVM instead of checkvpw).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.1

- checkquota and vpopbull were imported from vmailmgr 0.96.9 and
  translated from C++ to C.

- checkquota now scans IMAP folders.

- vpopbull calls utime to make doubly sure the .timestamp file is
  updated.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------